#pragma once

class BoolAssertion {

};