#pragma once

class FloatAssertion {

};