#pragma once

class StringAssertion {

};